# echo-backend

./: .gitignore  Dockerfile  README.md  conftest.py  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 52062dba4b22_initial_migration.py  add_api_hits_and_system_metrics.py  add_llm_metrics.py
docs/api/: README.md  admin.md  auth.md  configuration.md  diary.md  echo.md  monitoring.md  performance.md  security.md  testing.md  users.md
init-scripts/: 01-init-db.sql  02-create-tables.sql
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/middleware/: __init__.py  metrics_middleware.py
src/repository/: users.py
src/routes/: __init__.py  admin.py  admin_dashboard.py  auth.py  echo.py  prometheus_stats.py  psychological_tests.py  stats.py  users.py
src/services/: ai.py  auth.py  email.py  encryption.py  metrics.py  psychological_tests.py
src/services/templates/: email_template.html  reset_password_email.html
src/tests/: conftest.py  test_admin.py  test_admin_dashboard.py  test_ai_responses.py  test_auth.py  test_echo.py  test_email.py  test_encryption.py  test_psychological_tests.py  test_repository_users.py  test_routes_psychological.py  test_users.py
